# TensorRT-Tutorial

./: .gitignore  NN_to_ONNX.py  README.md
post-trt/: CMakeLists.txt  main.cpp
pre-trt/: CMakeLists.txt  ONNX_to_TRT.py  main.cpp
